--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "fetch": "file:src/fetch",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "types": "file:src/types",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
