--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "@types/express": "^4.17.21",
     "axios": "^1.7.1",
     "express": "^4.19.2",
+    "helpers": "file:helpers",
+    "types": "file:types",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
