--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "components": "file:src/components",
+    "enzyme": "^3.11.0",
     "fetch": "file:src/fetch",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -44,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/enzyme": "^3.10.18",
+    "jest": "^27.5.1"
   }
 }
